# web-application-demo

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs
src/infrastructure/: db.rs
src/presentation/: routes.rs
src/presentation/handlers/graphql/: routes.rs
src/presentation/handlers/rest/: routes.rs
src/tests/: db_connection_test.rs
