[package]
name = "web-application-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
axum = "0.8.1"
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
slab = "0.4.9"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
